--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>あおいちゃんがすき</p>
   <p>リョナOK</p></li>
           <li class="list-nakami"><p class="up">茜ちゃんのお友達リスト</p>
-          <p>葵ちゃん</p>
+          <p>葵ちゃん!</p>
           <p>ゆかりさん</p>
           <p>マキさん</p>
           <p>ずんちゃん</p>
